# tee-builder

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.json
scripts/: block-builder.sh  check.sh  check_app.sh  check_common.sh  check_thirdparty.sh  docker.sh  executor.sh  mempool.sh  pool-aggregator.sh
src/apps/: Cargo.toml
src/apps/block-builder/: Cargo.toml
src/apps/block-builder/src/: api.rs  app.rs  build.rs  deps.rs  lib.rs  types.rs
src/apps/mempool/: Cargo.toml
src/apps/mempool/src/: api.rs  app.rs  lib.rs  types.rs
src/apps/pool-aggregator/: Cargo.toml
src/apps/pool-aggregator/src/: api.rs  app.rs  lib.rs  server.rs  types.rs
src/apps/simulator/: Cargo.toml
src/apps/simulator/src/: app.rs  lib.rs  types.rs
src/apps/src/: lib.rs
src/common/block_builder/: Cargo.toml
src/common/block_builder/src/: block_builder.rs  lib.rs  simulator.rs  types.rs
src/common/eth_client/: Cargo.toml
src/common/eth_client/src/: beacon_client.rs  beacon_head_state.rs  execution_client.rs  hash_pool.rs  head_state.rs  lib.rs  tx_client.rs  tx_fetcher.rs
src/common/evm_executor/: Cargo.toml
src/common/evm_executor/src/: context.rs  executor.rs  lib.rs  precompile.rs  state_fetcher.rs  state_proxy.rs
src/common/mempool/: Cargo.toml
src/common/mempool/src/: client.rs  ext.rs  lib.rs  types.rs
src/common/mev_boost/: Cargo.toml
src/common/mev_boost/src/: lib.rs  relay.rs  submitter.rs  types.rs
src/common/txpool/: Cargo.toml
src/common/txpool/src/: bundle.rs  lib.rs  price_pool.rs  seq_pool.rs  txpool.rs  types.rs
