[package]
name = "eth_client"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["jsonrpc/std", "serde/std", "serde_json/std", "base/std", "net-http/std", "eth_types/std", "glog/std", "bytes/std", "crypto/std"]
tstd = ["sgxlib/tstd", "jsonrpc/tstd", "serde/tstd", "serde_json/tstd", "base/tstd", "net-http/tstd", "eth_types/tstd", "glog/tstd", "bytes/tstd", "crypto/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
net-http = { git = "https://github.com/automata-network/net-http-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
bytes = { git = "https://github.com/automata-network/bytes-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
rlp = { version = "0.5", default-features = false }
rlp-derive = { version = "0.1" }