[package]
name = "mev_boost"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["eth_types/std", "serde/std", "ssz/std", "blst/std", "net-http/std", "glog/std", "base/std", "serde_json/std", "crypto/std", "eth_client/std"]
tstd = ["sgxlib/tstd", "eth_types/tstd", "serde/tstd", "ssz/tstd", "blst/tstd", "net-http/tstd", "glog/tstd", "base/tstd", "serde_json/tstd", "crypto/tstd", "eth_client/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
eth_client = { path = "../eth_client", default-features = false }
net-http = { git = "https://github.com/automata-network/net-http-rs", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
ssz = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
blst = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }

hex = { version = "0.4", default-features = false, features = ["alloc"] }
