[package]
name = "txpool"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["glog/std", "eth_types/std", "serde/std", "crypto/std", "base/std"]
tstd = ["sgxlib/tstd", "glog/tstd", "eth_types/tstd", "serde/tstd", "crypto/tstd", "base/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }

rlp = { version = "0.5", default-features = false }
rlp-derive = { version = "0.1" }